# parallelProgramming

./: CMakeLists.txt  main.cpp
lab1/: Readme.md  lab1.cpp
lab2/: Readme.md  lab2.cpp
